--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="qtd">Qtd: </string>
     <string name="preco">Preço: </string>
+    <string name="id">ID: </string>
+    <string name="cpf">CPF: </string>
+    <string name="categoria">Categoria: </string>
 </resources>
